# kenyaccounting

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE_EXPLAINER.md  NOTICE  README.md  TODOS.md  app.py  extract_timesheets_xlsx2tsvs.py  featurelist.md  pyproject.toml  requirements.txt  run_payroll.py  todos.md
.claude/commands/: logprompt.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
backgrounders/: backgrounder-additions.md
specs/: PromptHistory.md  backgrounder-Employment_Law_Update_2026-AI_Generated.md  calculation_flow.md  dev_strategy.md  initial_spec-2025_12_31.md  technical_spec.md  unit_test_spec.md
src/: __init__.py  calculators.py  compliance_2026.py  loaders.py  models.py  outputs.py  rates.py
tests/: .gitignore  specific_published_examples.txt  test_cases_aren.txt  test_compliance.py  test_loaders.py  test_payroll.py
tests/fixtures/: public_holidays_2026.tsv  test_contracts.tsv
tests/fixtures/generated_supplementals/: test_contracts.tsv  test_employees.tsv  test_leave_stocks.tsv
tests/fixtures/generated_supplementals/test_timesheets/: 2026_01.tsv  2026_02.tsv
tests/fixtures/generated_supplementals/test_weekly_schedules/: 2026_01.tsv  2026_02.tsv
tests/fixtures/generated_supplementals/trash/: test_contracts.tsv  test_employees.tsv  test_leave_stocks.tsv  test_payroll.py
tests/fixtures/leave_stocks/2026/: leave_stocks_2026_01_31.tsv
tests/fixtures/official/: test_employees.tsv
tests/fixtures/single_source_truth_tests/: specific_published_examples.txt
tests/fixtures/test_timesheets/: 2026_01.tsv  2026_02.tsv
(+4 files in other folders)
