[project]
name = "kenyaccounting"
version = "0.1.0"
description = "Compliant Kenyan Payroll System"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
